# konform

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
konform/: __init__.py  cmd.py  runners.py
tests/: test_konform.py
