[metadata]
name = konform
version = 0.1.0
author = Daan Seynaeve
author_email = dseynaeve@openanalytics.eu
description = Validates Kustomize best practices
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/openanalytics/konform
project_urls =
    Bug Tracker = http://github.com/openanalytics/konform/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Quality Assurance
    Development Status :: 4 - Beta
license = Apache
keywords = konform, kubernetes, kustomize, check, validation

[options]
packages = konform
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires = pyyaml
tests_require =
    nose
    nose-cover3
test_suite = nose.collector

[options.entry_points]
console_scripts =
    konform = konform.cmd:main
